--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Surf CV">
     <link rel="manifest" href="manifest.json">
-    <title>Previsiones Oleaje CV</title>
+    <title>Previsiones Oleaje</title>
     <style>
         * {
             margin: 0;
@@ -248,7 +248,7 @@
     </div>
     
     <div class="header">
-        <h1>🌊 Surf Forecast CV</h1>
+        <h1>🌊 Surf Forecast 🌊 </h1>
     </div>
     
     <div class="spots-nav">
@@ -264,6 +264,12 @@
             📍 Mapa General AEMET
         </div>
         <a href="https://www.aemet.es/es/eltiempo/prediccion/maritima?opc1=0&opc3=0&area=val1" target="_blank" class="aemet-link">
+            🗺️ Ver Mapa de Oleaje
+        </a>
+        <div class="card-header">
+            📍 Mapa General VENTUSKY
+        </div>
+        <a href="https://www.ventusky.com/?p=39.68;-0.05;8&l=wave" target="_blank" class="aemet-link">
             🗺️ Ver Mapa de Oleaje
         </a>
     </div>
